# IEP_Lab

lab1/: .gitignore  CMakeLists.txt
lab1/src/: item4.cpp  item5.cpp  item6.cpp
lab2/: CMakeLists.txt
lab2/src/: item10.cpp  item11.cpp  item12.cpp
lab2/terminalOutputs/: item10.txt
lab3/: CMakeLists.txt
lab3/src/: item13.cpp  item14.cpp
